# sysSentinel

./: .gitignore  CMakeLists.txt  README.md
include/sys_sentinel/: console_logger.h  dashboard.h  file_logger.h  logger.h  monitor.h  queue.h
src/: dashboard.cpp  main.cpp  monitor.cpp
